# UAV-Ground-Control-Station-

./: .cproject  .gitignore  .mxproject  .project  CLAUDE.md  LICENSE  README.md  uav_gcs_node Debug.launch  uav_gcs_node.ioc
Core/Inc/: FreeRTOSConfig.h  bmp180.h  mavlink_bridge.h  mpu6050.h  qmc5883p.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: bmp180.c  can.c  freertos.c  gpio.c  main.c  mavlink_bridge.c  mpu6050.c  qmc5883p.c  stm32f1xx_hal_msp.c  usart.c
Debug/: makefile  objects.list  sources.mk  uav_gcs_node.elf  uav_gcs_node.list  uav_gcs_node.map
Debug/Core/Src/: bmp180.cyclo  bmp180.d  bmp180.su  can.d  freertos.cyclo  freertos.d  freertos.su  gpio.d  i2c.d  main.cyclo  main.d  main.su  mpu6050.cyclo  mpu6050.d  mpu6050.su  qmc5883p.cyclo  qmc5883p.d  qmc5883p.su  stm32f1xx_hal_msp.cyclo  stm32f1xx_hal_msp.d  stm32f1xx_hal_msp.su  stm32f1xx_it.d  subdir.mk  system_stm32f1xx.d  usart.d
Debug/Core/Startup/: subdir.mk
Debug/Drivers/STM32F1xx_HAL_Driver/: stm32f1xx_hal.cyclo  stm32f1xx_hal.d  stm32f1xx_hal.su  stm32f1xx_hal_can.cyclo  stm32f1xx_hal_can.d  stm32f1xx_hal_can.su  stm32f1xx_hal_cortex.cyclo  stm32f1xx_hal_cortex.d  stm32f1xx_hal_cortex.su  stm32f1xx_hal_dma.cyclo  stm32f1xx_hal_dma.d  stm32f1xx_hal_dma.su  (+31 more)
ros2/uav_gcs_bridge/: package.xml  setup.cfg  setup.py
ros2/uav_gcs_bridge/uav_gcs_bridge/: attitude_listener.py  kalman_fusion.py
tools/: attitude_to_gazebo.py  hil_bridge.py  mavlink_read_test.py
tools/gcs_web/: .env.example  cesium_pov_brief.md  osd_overlay_brief.md  server.py
tools/gz_puppet/: puppet_world.sdf
(+32 files in other folders)
